# rust-ewasm

blake2b/: Cargo.toml  Makefile
blake2b/src/: blake2.rs
